fix according to https://stackoverflow.com/a/33768443

--- a/sass/_variables-dark.scss
+++ b/sass/_variables-dark.scss
@@ -74,13 +74,18 @@ $headings-color:          $content-4 !default;
 
 // [converter] If $bootstrap-sass-asset-helper if used, provide path relative to the assets load path.
 // [converter] This is because some asset helpers, such as Sprockets, do not work with file-relative paths.
-$icon-font-path: if($bootstrap-sass-asset-helper, 'bootstrap/', '../fonts/bootstrap/') !default;
+// $icon-font-path: if($bootstrap-sass-asset-helper, 'bootstrap/', '../fonts/bootstrap/') !default;
 
 //** File name for all font files.
-$icon-font-name:          'glyphicons-halflings-regular' !default;
+// $icon-font-name:          'glyphicons-halflings-regular' !default;
 //** Element ID within SVG icon file.
-$icon-font-svg-id:        'glyphicons_halflingsregular' !default;
+// $icon-font-svg-id:        'glyphicons_halflingsregular' !default;
 
+// https://stackoverflow.com/a/33768443
+$icon-font-path: '../fonts/';
+$icon-font-name: 'glyphicons-halflings-regular' !default;
+$icon-font-svg-id: 'glyphicons_halflingsregular' !default;
+@import 'glyphicons';
 
 //== Components
 //
